# DownClim

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  NEWS.md  README.md  README.qmd  environment.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd-pypi.yml  ci.yml
doc/: _index.md  bibliography.bib  conf.py  examples.rst  get_started.ipynb  index.md  index.rst  installation.md  reference.rst
doc/examples/: DownClimContext_example.yaml  all_functions.ipynb  datasets.ipynb  get_available_simulation.ipynb  test.py
docs/: DownClimContext_example.yaml  conf.py  examples.md  get_started.ipynb  getting_started.md  index.md  installation.md  logging.md  reference.md
docs/api_reference/: downclim.aoi.rst  downclim.dataset.chelsa2.rst  downclim.dataset.chirps.rst  downclim.dataset.cmip6.rst  downclim.dataset.connectors.rst  downclim.dataset.cordex.rst  downclim.dataset.era5.rst  downclim.dataset.gshtd.rst  downclim.dataset.rst  downclim.dataset.tmf.rst  downclim.dataset.utils.rst  downclim.downclim.rst  downclim.downscale.rst  downclim.evaluation.rst  downclim.logging_config.rst
docs/examples/: all_functions.ipynb  datasets.ipynb  get_available_simulation.ipynb  test.py
docs/examples/.ipynb_checkpoints/: datasets-checkpoint.ipynb
envs/: dev-dc.yml  xarray.yml
examples/: DownClimContext_example.yaml  datasets.ipynb  get_available_simulation.ipynb  get_started.ipynb  logging_example.py  test.py
resources/: parameters.yaml  projections_dag.tsv
scripts/: get_chelsa2.py  get_cordex2.py
src/downclim/: __init__.py  _version.py  aoi.py  downclim.py  downscale.py  evaluation.py  getters.py  list_projections.py  logging_config.py  parameters.py
src/downclim/data/: DownClimContext_template.yaml
src/downclim/dataset/: __init__.py  aoi.py  chelsa2.py  chirps.py  cmip6.py  connectors.py  cordex.py  cordex.py_bkp  era5.py  gshtd.py  tmf.py  utils.py
src/downclim/getters/: __init__.py  connectors.py  get_aoi.py  get_chelsa.py  get_chelsa2.py  get_chirps.py  get_cmip6.py  get_cordex.py  get_gshtd.py  utils.py
tests/: test_dataset.py  test_downclim.py  test_downscale.py  test_evaluation.py  test_getters.py  test_integration.py  test_logging.py
